gitops/apps/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 8005
      targetPort: 8005
